Bug 651041 - add API to store private data to an external string (r=njn)