js/src/jsstrinlines.h
@@ -391,15 +391,16 @@ JSShortString::initAtOffsetInBuffer(const jschar *chars, size_t length)
 }
 
 JS_ALWAYS_INLINE void
-JSExternalString::init(const jschar *chars, size_t length, intN type)
+JSExternalString::init(const jschar *chars, size_t length, intN type, void *closure)
 {
     d.lengthAndFlags = buildLengthAndFlags(length, FIXED_FLAGS);
     d.u1.chars = chars;
-    d.s.u2.externalStringType = type;
+    d.s.u2.externalType = type;
+    d.s.u3.externalClosure = closure;
 }
 
 JS_ALWAYS_INLINE JSExternalString *
-JSExternalString::new_(JSContext *cx, const jschar *chars, size_t length, intN type)
+JSExternalString::new_(JSContext *cx, const jschar *chars, size_t length, intN type, void *closure)
 {
     JS_ASSERT(uintN(type) < JSExternalString::TYPE_LIMIT);
     JS_ASSERT(chars[length] == 0);
@@ -407,7 +408,7 @@ JSExternalString::new_(JSContext *cx, const jschar *chars, size_t length, intN t
     JSExternalString *str = (JSExternalString *)js_NewGCExternalString(cx, type);
     if (!str)
         return NULL;
-    str->init(chars, length, type);
+    str->init(chars, length, type, closure);
     cx->runtime->updateMallocCounter((length + 1) * sizeof(jschar));
     return str;
 }
@@ -560,14 +561,14 @@ inline void
 JSExternalString::finalize(JSContext *cx)
 {
     JS_RUNTIME_UNMETER(cx->runtime, liveStrings);
-    if (JSStringFinalizeOp finalizer = str_finalizers[externalStringType()])
+    if (JSStringFinalizeOp finalizer = str_finalizers[externalType()])
         finalizer(cx, this);
 }
 
 inline void
 JSExternalString::finalize()
 {
-    JSStringFinalizeOp finalizer = str_finalizers[externalStringType()];
+    JSStringFinalizeOp finalizer = str_finalizers[externalType()];
     if (finalizer) {
         /*
          * Assume that the finalizer for the permanently interned
